syntax = "proto3";

package filetransfer;

service FileTransfer {
    rpc Upload(stream FileUploadRequest) returns(FileUploadResponse);
}

message FileUploadRequest {
    string filename = 1;
    bytes chunk = 2;
}

message FileUploadResponse {
    string filename = 1;
    uint32 size = 2;
}