syntax = "proto3";
package file;

service FileService {
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse);
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
  rpc ListFiles(ListFilesRequest) returns (stream ListFilesResponse);
  rpc DownloadFolder(DownloadFolderRequest) returns (stream DownloadFolderResponse);
  rpc UploadFolder(UploadFolderRequest) returns (stream UploadFolderResponse);
  rpc ListContent(ListContentRequest) returns (stream ListContentResponse);
}

message DownloadFileRequest {
  string name = 1;
}

message DownloadFileResponse {
  bytes chunk = 1;
}

message ListFilesRequest {
}

message ListFilesResponse {
  string name = 1;
  uint64 size = 2;
}

message UploadFileRequest {
  oneof type {
    string name = 1;
    bytes chunk = 2;
  }
}

message UploadFileResponse {
}

message UploadFolderRequest {
  oneof type {
    string name = 1;
    bytes chunk = 2;
  }
}

message UploadFolderResponse {
}

message DownloadFolderRequest {
  string name = 1;
}

message DownloadFolderResponse {
  bytes chunk = 1;
}